# mgt-boot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  keytoolSources.cmake
example/: CMakeLists.txt  genLinker.cmake  simpleVersion.cmake
example/config/: cryptOptions.cmake  mcuDetails.cmake  partitions.cmake  toolchain-xmc.cmake
example/flashLib/: CMakeLists.txt  flash.c  flash.h
example/mcu_port/: CMakeLists.txt  XMC4700.h  clock.c  flash.c
example/src/: XMC4700x2048.ld  app.c  system_XMC4700.h
inc/: boot_app.h  build_time.h  clock_port.h  flash.h  flash_port.h
src/: bl_main.c  boot_app_cm4.c  partitions.h.in
stubs/: target.h
tools/: genBuildTime.cmake  genBuildTime.sh  genKey.sh  genLinker.cmake  runSignTool.sh
